Bug fix: trying to implement dynamic dark mode

--- a/my-portfolio/src/DarkTheme.css
+++ b/my-portfolio/src/DarkTheme.css
@@ -1,4 +1,3 @@
-
 :root {
   --primary-bg: #121212;
   --secondary-bg: #1E1E1E;
@@ -19,8 +18,12 @@ body {
 
 /* Dark Theme */
 body.dark-mode {
-  background-color: var(--primary-bg); /* Dark background */
-  color: var(--primary-text); /* Dark text color */
+  background-color: var(--primary-bg);
+  color: var(--primary-text);
+}
+
+h2.dark-mode {
+  color: var(--primary-text);
 }
 
 /* Custom Dark Mode Toggle Element */
